--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "heroku": "^7.56.0",
     "mongoose": "^5.13.0"
   },
   "devDependencies": {
