--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "heroku": "^7.56.0",
     "joi": "^17.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0"
   },
   "devDependencies": {
